# drip-cpp-sdk

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
examples/: basic_usage.cpp  demo.cpp  health_check.cpp  quickstart.cpp
include/drip/: client.hpp  drip.hpp  errors.hpp  types.hpp
quickstart/: .env.example  CMakeLists.txt  main.cpp
scripts/: sync-to-public-repo.sh
src/: client.cpp
tests/: break_test.cpp  test_client.cpp
